--- a/index.html
+++ b/index.html
@@ -784,14 +784,25 @@
     <section id="giving-page" class="page-section py-20" style="width: 100%; background: var(--light-ash);">
      <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
       <h1 class="section-title text-5xl font-bold text-center mb-8" style="color: var(--primary-green);">Give &amp; Partner With Us</h1>
-      <p class="text-xl text-gray-700 text-center mb-12 max-w-3xl mx-auto">Your giving helps us spread the Gospel and impact lives through media, missions, outreach, and powerful ministry programs. Partner with us today!</p><!-- Online Payment -->
-      <div class="bg-white rounded-xl shadow-2xl p-8 mb-8 border-t-4" style="border-top-color: var(--accent-blue);">
-       <div class="text-center mb-8">
-        <svg class="w-24 h-24 mx-auto mb-4" fill="none" stroke="currentColor" style="color: var(--accent-blue);" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" />
-        </svg>
-        <h2 class="text-3xl font-bold mb-4" style="color: var(--primary-green);">Give Online with Card</h2>
-        <p class="text-lg text-gray-600 mb-6">Secure payment via Paystack - Donate with your debit or credit card</p><a href="https://paystack.com/pay/vibrantimpactministries" target="_blank" rel="noopener noreferrer" class="payment-button"> 💳 Give Now with Card </a>
-        <p class="text-sm text-gray-500 mt-4">🔒 Secure payment powered by Paystack</p>
+      <p class="text-xl text-gray-700 text-center mb-12 max-w-3xl mx-auto">Your giving helps us spread the Gospel and impact lives through media, missions, outreach, and powerful ministry programs. Partner with us today!</p><!-- Online Payment Options -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8"><!-- PayPal Payment -->
+       <div class="bg-white rounded-xl shadow-2xl p-8 border-t-4" style="border-top-color: var(--accent-blue);">
+        <div class="text-center">
+         <svg class="w-24 h-24 mx-auto mb-4" fill="currentColor" style="color: #0070BA;" viewbox="0 0 24 24"><path d="M7.076 21.337H2.47a.641.641 0 0 1-.633-.74L4.944.901C5.026.382 5.474 0 5.998 0h7.46c2.57 0 4.578.543 5.69 1.81 1.01 1.15 1.304 2.42 1.012 4.287-.023.143-.047.288-.077.437-.983 5.05-4.349 6.797-8.647 6.797h-2.19c-.524 0-.968.382-1.05.9l-1.12 7.106zm14.146-14.42a3.35 3.35 0 0 0-.607-.541c-.013.076-.026.175-.041.254-.93 4.778-4.005 7.201-9.138 7.201h-2.19a.563.563 0 0 0-.556.479l-1.187 7.527h-.506l-.24 1.516a.56.56 0 0 0 .554.647h3.882c.46 0 .85-.334.922-.788.06-.26.76-4.852.76-4.852.072-.455.462-.788.922-.788h.58c3.76 0 6.705-1.528 7.565-5.946.36-1.847.174-3.388-.806-4.461z" />
+         </svg>
+         <h2 class="text-3xl font-bold mb-4" style="color: var(--primary-green);">Give via PayPal</h2>
+         <p class="text-lg text-gray-600 mb-6">Secure international payment via PayPal</p><a href="https://www.paypal.me/Funmzyanie" target="_blank" rel="noopener noreferrer" class="payment-button"> 💙 Give with PayPal </a>
+         <p class="text-sm text-gray-500 mt-4">🔒 Secure payment powered by PayPal</p>
+        </div>
+       </div><!-- Paystack Payment -->
+       <div class="bg-white rounded-xl shadow-2xl p-8 border-t-4" style="border-top-color: var(--accent-blue);">
+        <div class="text-center">
+         <svg class="w-24 h-24 mx-auto mb-4" fill="none" stroke="currentColor" style="color: var(--accent-blue);" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" />
+         </svg>
+         <h2 class="text-3xl font-bold mb-4" style="color: var(--primary-green);">Give with Card</h2>
+         <p class="text-lg text-gray-600 mb-6">Secure payment via Paystack - Donate with your debit or credit card</p><a href="https://paystack.com/pay/vibrantimpactministries" target="_blank" rel="noopener noreferrer" class="payment-button"> 💳 Give Now with Card </a>
+         <p class="text-sm text-gray-500 mt-4">🔒 Secure payment powered by Paystack</p>
+        </div>
        </div>
       </div><!-- Bank Transfer -->
       <div class="bg-white rounded-xl shadow-2xl p-8 border-t-4" style="border-top-color: var(--accent-blue);">
@@ -882,13 +893,13 @@
       </div><!-- Social Media Links -->
       <div class="bg-white rounded-xl shadow-lg p-8 mt-12 border-2" style="border-color: var(--light-ash);">
        <h2 class="text-3xl font-bold text-center mb-8" style="color: var(--primary-green);">Connect With Us</h2>
-       <div class="flex flex-wrap justify-center gap-6"><a href="https://youtube.com/@vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-red-50 rounded-lg hover:bg-red-100 transition-colors">
+       <div class="flex flex-wrap justify-center gap-6"><a href="https://youtube.com/@ProphetValentineIfedayoChannel" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-red-50 rounded-lg hover:bg-red-100 transition-colors">
          <svg class="w-16 h-16 mb-3" fill="currentColor" style="color: #FF0000;" viewbox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
-         </svg><span class="font-bold text-gray-800">YouTube</span> </a> <a href="https://facebook.com/vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors">
+         </svg><span class="font-bold text-gray-800">YouTube</span> </a> <a href="https://facebook.com/VibrantImpactMinistries" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors">
          <svg class="w-16 h-16 mb-3" fill="currentColor" style="color: #1877F2;" viewbox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
-         </svg><span class="font-bold text-gray-800">Facebook</span> </a> <a href="https://tiktok.com/@vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-gray-50 rounded-lg hover:bg-gray-100 transition-colors">
+         </svg><span class="font-bold text-gray-800">Facebook</span> </a> <a href="https://tiktok.com/@prophet_valentineifedayo" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-gray-50 rounded-lg hover:bg-gray-100 transition-colors">
          <svg class="w-16 h-16 mb-3" fill="currentColor" style="color: #000000;" viewbox="0 0 24 24"><path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z" />
-         </svg><span class="font-bold text-gray-800">TikTok</span> </a> <a href="https://twitch.tv/vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-purple-50 rounded-lg hover:bg-purple-100 transition-colors">
+         </svg><span class="font-bold text-gray-800">TikTok</span> </a> <a href="https://twitch.tv/vibrantimpactministries" target="_blank" rel="noopener noreferrer" class="social-icon flex flex-col items-center p-6 bg-purple-50 rounded-lg hover:bg-purple-100 transition-colors">
          <svg class="w-16 h-16 mb-3" fill="currentColor" style="color: #9146FF;" viewbox="0 0 24 24"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z" />
          </svg><span class="font-bold text-gray-800">Twitch</span> </a>
        </div>
@@ -1019,13 +1030,13 @@
       </div><!-- Social Media -->
       <div class="mt-12 gradient-green rounded-xl shadow-2xl p-8 text-white text-center">
        <h2 class="text-3xl font-bold mb-6">Follow Us on Social Media</h2>
-       <div class="flex flex-wrap justify-center gap-6"><a href="https://youtube.com/@vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon">
+       <div class="flex flex-wrap justify-center gap-6"><a href="https://youtube.com/@ProphetValentineIfedayoChannel" target="_blank" rel="noopener noreferrer" class="social-icon">
          <svg class="w-12 h-12" fill="currentColor" viewbox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
-         </svg></a> <a href="https://facebook.com/vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon">
+         </svg></a> <a href="https://facebook.com/VibrantImpactMinistries" target="_blank" rel="noopener noreferrer" class="social-icon">
          <svg class="w-12 h-12" fill="currentColor" viewbox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
-         </svg></a> <a href="https://tiktok.com/@vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon">
+         </svg></a> <a href="https://tiktok.com/@prophet_valentineifedayo" target="_blank" rel="noopener noreferrer" class="social-icon">
          <svg class="w-12 h-12" fill="currentColor" viewbox="0 0 24 24"><path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z" />
-         </svg></a> <a href="https://twitch.tv/vibrantimpact" target="_blank" rel="noopener noreferrer" class="social-icon">
+         </svg></a> <a href="https://twitch.tv/vibrantimpactministries" target="_blank" rel="noopener noreferrer" class="social-icon">
          <svg class="w-12 h-12" fill="currentColor" viewbox="0 0 24 24"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z" />
          </svg></a>
        </div>
@@ -1098,7 +1109,7 @@
       church_slogan: "Raising Vibrant Believers for Kingdom Impact",
       welcome_title: "Welcome to Vibrant Impact Ministries",
       welcome_message: "Experience the transforming power of God through prophetic teaching, healing, and deliverance.",
-      church_phone: "+234 XXX XXX XXXX",
+      church_phone: "+2348146310820",
       church_email: "pastorvalentineifedayo@gmail.com",
       church_address: "Ughele Junction, along Ado Road, Akure, Ondo State, Nigeria",
       account_number: "1025522432",
@@ -1508,5 +1519,5 @@
       }
     });
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a51520af1545350',t:'MTc2NDI0MzMwOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a51797be0f45350',t:'MTc2NDI0NDkyNS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>Initial website code
