--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
         submitBtn.innerHTML = originalText;
       }
     });
-  </script>// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  </script>// // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyBYwJ4PjGyycAzUS7iyTrTRpIUcKLAvPVE",
   authDomain: "vim-p-cc4be.firebaseapp.com",
@@ -1210,6 +1210,7 @@ const firebaseConfig = {
   messagingSenderId: "444991156114",
   appId: "1:444991156114:web:a6c5425cf3a9aa91369b4b",
   measurementId: "G-V0BVRB9WRR"
+};
 };
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a5318e4a20506cf',t:'MTc2NDI2MTk0MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
