--- a/index.html
+++ b/index.html
@@ -6,14 +6,7 @@
   <title>Vibrant Impact Ministries</title>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></scrip// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyBYwJ4PjGyycAzUS7iyTrTRpIUcKLAvPVE",
   authDomain: "vim-p-cc4be.firebaseapp.com",
@@ -22,6 +15,14 @@ const firebaseConfig = {
   messagingSenderId: "444991156114",
   appId: "1:444991156114:web:a6c5425cf3a9aa91369b4b",
   measurementId: "G-V0BVRB9WRR"
+};t>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
 };
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
