--- a/index.html
+++ b/index.html
@@ -1157,19 +1157,30 @@
       </div>
      </div>
     </div>
-   </section><!-- DEPARTMENT SECTION -->
-<section id="departments" class="section">
+   </section><section id="departments" class="section">
   <div class="container">
     <div class="content-card">
-      <h2 style="text-align:center; margin-bottom:20px;">Departments</h2>
-      <ul style="list-style:none; padding:0; display:flex; flex-wrap:wrap; justify-content:center; gap:30px;">
-        <li style="background:#f5f5f5; padding:15px 25px; border-radius:10px; min-width:150px; text-align:center;">Media Department</li>
-        <li style="background:#f5f5f5; padding:15px 25px; border-radius:10px; min-width:150px; text-align:center;">Choir Department</li>
-        <li style="background:#f5f5f5; padding:15px 25px; border-radius:10px; min-width:150px; text-align:center;">Ushering Department</li>
-        <li style="background:#f5f5f5; padding:15px 25px; border-radius:10px; min-width:150px; text-align:center;">Prayer Department</li>
-        <li style="background:#f5f5f5; padding:15px 25px; border-radius:10px; min-width:150px; text-align:center;">Technical Department</li>
-        <li style="background:#f5f5f5; padding:15px 25px; border-radius:10px; min-width:150px; text-align:center;">Welfare Department</li>
-      </ul>
+      <h2 style="text-align:center; margin-bottom:30px;">Departments</h2>
+      <div class="services-list" style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px;">
+        <div class="service-item" style="background:#fff; padding:20px; border-radius:10px; min-width:180px; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+          <h3>Media Department</h3>
+        </div>
+        <div class="service-item" style="background:#fff; padding:20px; border-radius:10px; min-width:180px; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+          <h3>Choir Department</h3>
+        </div>
+        <div class="service-item" style="background:#fff; padding:20px; border-radius:10px; min-width:180px; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+          <h3>Ushering Department</h3>
+        </div>
+        <div class="service-item" style="background:#fff; padding:20px; border-radius:10px; min-width:180px; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+          <h3>Prayer Department</h3>
+        </div>
+        <div class="service-item" style="background:#fff; padding:20px; border-radius:10px; min-width:180px; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+          <h3>Technical Department</h3>
+        </div>
+        <div class="service-item" style="background:#fff; padding:20px; border-radius:10px; min-width:180px; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+          <h3>Welfare Department</h3>
+        </div>
+      </div>
     </div>
   </div>
 </section>
